--- a/public/manifest.json
+++ b/public/manifest.json
@@ -76,5 +76,5 @@
     "lang": "ru",
     "name": "MAMONT Group Matrix",
     "short_name": "MAMONT Matrix",
-    "start_url": "/"
+    "start_url": "."
 }
